--- a/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
@@ -1,72 +1,88 @@
 <div class="main-content" id="maincontent">
     <div class="content">
         <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Download Mandate</span>
             </div>
-            <div class="rightmenu">
+            <!--<div class="rightmenu">
+               <span id="btnp">
+                        <input type="button" class="btn btn-success" id="btnreject"
+                               (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" />
+                     -   </span>
+                        <span id="btnspa">
+                            <i class="fa fa-download" aria-hidden="true"></i>
+                            <input type="button" class=" btn btn-success" id="btnexcel"
+                                   value="Download Excel" (click)="download()" />
+                        </span>
+                        <div class="toolbar pull-right">
+                <ul class="toolbar-content">
+
+
+                    <li>
+                        <i class="fa fa-download" aria-hidden="true" title="Export"></i>
+                        <label>
+                            Download Mandate Excel File
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
+                        <label>
+                            Download Scanned Mandate
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                        <label>
+                            Reject Mandate
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
+                        <label>
+                            Submit
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
+                        <label>
+                            Reset Password
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"
+                           title="Delete"></i>
+                        <label>
+                            Delete
+                        </label>
+                    </li>
+                    <li style="display:none;">
+                        <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
+                        <label>
+                            Back
+                        </label>
+                    </li>
+                </ul>
+            </div>
+            </div>-->
+
+
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-6"></div>
+            <div class="col-md-6 col-sm-6 col-xs-12" id="btngroup">
                 <span id="btnp">
                     <input type="button" class="btn btn-success" id="btnreject"
                            (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" />
-                    </span>
-                    <span id="btnspa">
-                        <i class="fa fa-download" aria-hidden="true"></i>
-                        <input type="button" class=" btn btn-success" id="btnexcel"
-                               value="Download Excel" (click)="download()" />
-                    </span>
-                    <!--<div class="toolbar pull-right">
-            <ul class="toolbar-content">
 
-
-                <li>
-                    <i class="fa fa-download" aria-hidden="true" title="Export"></i>
-                    <label>
-                        Download Mandate Excel File
-                    </label>
-                </li>
-                <li>
-                    <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
-                    <label>
-                        Download Scanned Mandate
-                    </label>
-                </li>
-                <li>
-                    <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                    <label>
-                        Reject Mandate
-                    </label>
-                </li>
-                <li>
-                    <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
-                    <label>
-                        Submit
-                    </label>
-                </li>
-                <li style="display: none">
-                    <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
-                    <label>
-                        Reset Password
-                    </label>
-                </li>
-                <li style="display: none">
-                    <i class="fa fa-times" aria-hidden="true"
-                       title="Delete"></i>
-                    <label>
-                        Delete
-                    </label>
-                </li>
-                <li style="display:none;">
-                    <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
-                    <label>
-                        Back
-                    </label>
-                </li>
-            </ul>
-        </div>-->
+                </span>
+                <span id="btnspa">
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <input type="button" class=" btn btn-success" id="btnexcel"
+                           value="Download Excel" (click)="download()" />
+                </span>
             </div>
         </div>
-
-
         <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="row no-padding">
                 <div class="col-md-4 col-sm-4 col-xs-12">
@@ -130,7 +146,7 @@
 
 
                     <!--<input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
-                           (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />-->
+                    (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />-->
                 </div>
 
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
