--- a/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
@@ -13,8 +13,8 @@
                             <i class="fa fa-download" aria-hidden="true" title="Export"></i>
                             <!--<button type="button" class="btn btn-success" (click)="downloadExcel()">Download Mandate Excel File</button>-->
                             <!--<label (click)="download()">
-                                Download Mandate Excel File
-                            </label>-->
+                            Download Mandate Excel File
+                        </label>-->
                         </li>
                         <li>
                             <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
@@ -22,12 +22,12 @@
                                 Download Scanned Mandate
                             </label>
                         </li>
-                        <li>
+                        <!--<li>
                             <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                            <label>
+                            <label data-toggle="modal" data-target="#myModal" (click)="show()">
                                 Reject Mandate
                             </label>
-                        </li>
+                        </li>-->
                         <li>
                             <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
                             <label>
@@ -112,7 +112,10 @@
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
                            value="Search" (click)="SearchByReference(Reference.value)" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
-                    <button type="button" class="btn btn-success" (click)="downloadExcel()">Download Mandate Excel File</button>
+                    <button type="button" class="btn btn-success" (click)="downloadExcel()">Download Mandate Excel File</button> &nbsp;
+                    <label data-toggle="modal" data-target="#myModal" (click)="show()">
+                        Reject Mandate
+                    </label>
                     <!--<button type="button" class="btn btn-success" (click)="checkedDemo()"> Excel File DEmo</button>-->
 
                 </div>
@@ -125,7 +128,7 @@
             <table id="tbldownoldmandate">
                 <thead>
                     <tr>
-                        <th style="width:150px;"><input type="checkbox" name="all">All</th>
+                        <th style="width:150px;"><input type="checkbox" name="all" vaule="all" (click)="toggleSelect($event)">All</th>
                         <th style="width:150px;">Mandate ID</th>
                         <th style="width:150px;">Name</th>
                         <th style="width:150px;">Date On Mandate</th>
@@ -144,7 +147,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let td of tabledata; let i=index;">
-                        <td style="width:150px;"><input type="checkbox" (change)="ifchecked(td.mandateid,td.Customer1,td.DateOnMandate,td.IsPrint,td.IsScan,td.Refrence1,td.Amount,td.AcNo,td.Code,td.BankName,td.Frequency,td.debittype,td.ToDebit,td.createdon)" name="all">{{i+1}}</td>
+                        <td style="width:150px;"><input type="checkbox" value="td.selected" [checked]="td.selected" (change)="onChange($event,td); td.selected = !(td.selected)" name="all"></td>
                         <td style="width:150px;">{{td.mandateid}}</td>
                         <td style="width:150px;">{{td.Customer1}}</td>
                         <td style="width:150px;">{{td.DateOnMandate}}</td>
@@ -160,12 +163,47 @@
                         <td style="width:150px;">{{td.ToDebit}}</td>
                         <td style="width:150px;">{{td.createdon}}</td>
                     </tr>
+                    <tr *ngIf="tabledata?.length == 0">
+                        <td colspan="3">No Record Found!</td>
+                    </tr>
 
                 </tbody>
 
             </table>
 
         </div>
-
     </div>
+</div>
+<div class="container">
+    <!-- Modal -->
+    <div class="modal" id="myModal" role="dialog" [style.display]="showModal ? 'block':'none'">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                  
+                    <h5 class="modal-title" style="text-align:center">Are you Sure to Reject Mandate</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <label>Reason</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <textarea class="form-control" id="myform" #RejectedReason placeholder="Enter The Reason"></textarea>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="modal-footer" style="text-align:center">
+                    
+                    <button type="button" class="btn btn-primary" (click)="RejectData(FromDate.value,ToDate.value,RejectedReason.value,selected.value)">Reject</button> &nbsp;
+                    <button type="button" class="btn btn-default" (click)="hide()" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
