--- a/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
@@ -81,6 +81,16 @@
                     <input type="button" class=" btn btn-success" id="btnexcel"
                            value="Download Excel" (click)="download()" />
                 </span>
+
+
+                <!--<span id="btnspa">
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <input type="button" class=" btn btn-success" id="btnexcel"
+                           value="Download Scanned Mandate" (click)="downloadScannedMandate()" />
+                </span>-->
+
+
+
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -145,8 +155,8 @@
                            (click)="BindGrid(FromDate.value,ToDate.value,Bank.value,RefNo.value)" value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
 
 
-                    <!--<input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
-                    (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />-->
+                    <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
+                    (click)="downloadScannedMandate()" value="Download Scanned Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
                 </div>
 
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
