--- a/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.css
+++ b/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.css
@@ -30268,3 +30268,13 @@ i#sideicon {
         box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
     }
 }
+.loaderposition {
+    position: absolute;
+    left: 0% !important;
+    z-index: 9999 !important;
+    top: 0% !important;
+}
+
+/*.loadernone{
+    display:none;
+}*/
