--- a/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
+++ b/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
@@ -18,57 +18,57 @@
                 </div>
             </div>
             <!--<div class="rightmenu">
-                <div class="toolbar pull-right">
-                    <ul class="toolbar-content">
+            <div class="toolbar pull-right">
+                <ul class="toolbar-content">
 
 
 
-                        <li>
-                            <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
-                            <label>
-                                New
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                            <label>
-                                Edit
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
-                            <label>
-                                Save
-                            </label>
-                        </li>
-                        <li style="display: none">
-                            <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
-                            <label>
-                                Reset Password
-                            </label>
-                        </li>
-                        <li style="display: none">
-                            <i class="fa fa-times" aria-hidden="true"
-                               title="Delete"></i>
-                            <label>
-                                Delete
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
-                            <label>
-                                Back
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-bars" aria-hidden="true" title="Export"></i>
-                            <label>
-                                Previous Records
-                            </label>
-                        </li>
-                    </ul>
-                </div>
-            </div>-->
+                    <li>
+                        <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
+                        <label>
+                            New
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                        <label>
+                            Edit
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
+                        <label>
+                            Save
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
+                        <label>
+                            Reset Password
+                        </label>
+                    </li>
+                    <li style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"
+                           title="Delete"></i>
+                        <label>
+                            Delete
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-reply" aria-hidden="true" title="Back"></i>
+                        <label>
+                            Back
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-bars" aria-hidden="true" title="Export"></i>
+                        <label>
+                            Previous Records
+                        </label>
+                    </li>
+                </ul>
+            </div>
+        </div>-->
         </div>
         <form style="overflow: visible!important;" [formGroup]="HistoricalMandateForm" autocomplete="off" class="form">
             <div class="row">
@@ -110,6 +110,9 @@
             <input type="button" class="col-sm-12 col-md-1 col-xs-12y btn btn-primary htmldateheight" value="Download Excel" (click)="download()" />
 
 
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" style="display: none;">
+            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="top: 1%;">
             <table id="histmandtbl">
