--- a/QuickZip/ClientApp/app/master/umrnupload/umrnupload.component.html
+++ b/QuickZip/ClientApp/app/master/umrnupload/umrnupload.component.html
@@ -1,7 +1,7 @@
 <div class="main-content" id="maincontent">
    
     <div class="content">
-        <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+        <div class="col-md-12 col-sm-6 col-xs-4">
 
 
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
