--- a/QuickZip/ClientApp/app/master/user/user.component.html
+++ b/QuickZip/ClientApp/app/master/user/user.component.html
@@ -65,7 +65,7 @@
                         Search
                     </label>
                     <div class="col-sm-7 col-md-8 col-xs-7 displayinlineblock">
-                        <input type="text" id="txtSearch" class="col-sm-12 col-md-12 col-xs-12" (keyup)="bindUser()"/>
+                        <input type="text" id="txtSearch" class="col-sm-12 col-md-12 col-xs-12" (keyup)="bindUser()" />
                     </div>
                 </div>
             </div>
@@ -191,7 +191,7 @@
                                                 Email to be sent on
                                             </label>
                                             <div class="col-sm-6 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                                <input type="email" name="emailsent" class="col-sm-12 col-md-12 col-xs-12 " formControlName="emailsent" id="txtemailsent" (change)="chkEmailSent()" (keyup)="removeClass()" />
+                                                <input type="email" name="emailsent" class="col-sm-12 col-md-12 col-xs-12 " formControlName="emailsent" id="txtemailsent" (change)="chkEmailSent()" (keyup)="removeClass()"  style="height:22px"/>
                                             </div>
                                         </div>
                                     </div>
@@ -203,7 +203,7 @@
                                                 Bank Validation
                                             </label>
                                             <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                                <input type="text" name="bankval" class="col-sm-12 col-md-12 col-xs-12" formControlName="bankval" (change)="bankValidationChange()"/>
+                                                <input type="text" name="bankval" class="col-sm-12 col-md-12 col-xs-12" formControlName="bankval" (change)="bankValidationChange()" />
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +213,7 @@
                                                 Account Validation
                                             </label>
                                             <div class="col-sm-7 col-md-7 col-xs-7 no-padding-left displayinlineblock">
-                                                <input type="text" name="accountval" class="col-sm-12 col-md-12 col-xs-12" formControlName="accountval" (change)="accountValidationChange()"/>
+                                                <input type="text" name="accountval" class="col-sm-12 col-md-12 col-xs-12" formControlName="accountval" (change)="accountValidationChange()" />
                                             </div>
                                         </div>
                                     </div>
@@ -441,7 +441,7 @@
                                                     </div>
 
                                                     <div id="divplusicon" *ngIf="divplusicon">
-                                                        <i class="fa fa-user-plus plusicon" aria-hidden="true" style="position: absolute;top: 29px;right: 145px;"></i>
+                                                        <i class="fa fa-user-plus plusicon" aria-hidden="true" (click)="onClick($event)" style="position: absolute;top: 9px;right: 145px;"></i>
                                                     </div>
                                                 </div>
 
@@ -455,14 +455,14 @@
                                                             </label>
                                                             <div class="col-sm-10 col-md-10 col-xs-8 no-padding">
                                                                 <div class="row">
-                                                                    <div class="col-md-3 col-sm-3 col-xs-12 no-padding">
+                                                                    <div class="col-md-2 col-sm-3 col-xs-12 no-padding">
                                                                         <input type="checkbox" name="chkUmrnHistory" id="IschkUmrnHistory"
                                                                                class="pull-left" style="clear: both" value="17" formControlName="chkUmrnHistory" />
                                                                         <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                             UMRN History
                                                                         </label>
                                                                     </div>
-                                                                    <div class="col-md-3 col-sm-2 col-xs-12 no-padding">
+                                                                    <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
                                                                         <input type="checkbox" name="chkUmrnUpload" id="IschkUmrnUpload"
                                                                                class="pull-left" style="clear: both" value="18" formControlName="chkUmrnUpload" />
                                                                         <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
@@ -531,24 +531,30 @@
                                             <div id="dvBulkUpload" *ngIf="dvBulkUpload" class=" col-sm-12 col-xs-12 col-md-12 no-padding">
                                                 <div class="col-md-11 col-sm-12 col-xs-12 no-padding">
                                                     <div class="form-group">
-                                                        <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
+                                                        <div class="row">
+                                                        <label class="col-sm-2 col-md-2 col-xs-4 control-label " for="form-field-1">
                                                             Bulk Upload
                                                         </label>
-                                                        <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divbulkupload" *ngFor="let data of bulkupload">
-                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" name="chkbulkuploadlink" [formControlName]="chkbulkuploadlink" id={{data.LinkID}}
-                                                                       class="pull-left" value={{data.LinkID}} (click)="checkLinks(data)"/>
+                                                        <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divbulkupload">
+                                                         <div class="row">
+                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding" *ngFor="let data of bulkupload">
+                                                                <input type="checkbox" name="chkbulkuploadlink" formControlName="chkbulkuploadlink" id={{data.LinkID}}
+                                                                       class="pull-left" value={{data.LinkID}} (click)="checkLinks(data)" />
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                     {{data.LinkName}}
                                                                 </label>
-                                                            </div>
+                                                           
                                                             <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
                                                                 <input type="checkbox" id="bulkemandate" style="clear: both" class="pull-left" value="28" />
                                                                 <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
                                                                     Emandate
                                                                 </label>
                                                             </div>-->
+                                                              </div>
+                                                            </div>
                                                         </div>
+                                                            </div>
+                                                           
                                                     </div>
                                                 </div>
                                                 <!--<div class="col-md-10 col-sm-10 col-xs-12 no-padding" style="display: none;" id="div2">
@@ -564,37 +570,42 @@
 
                                             <div id="dvVideos" *ngIf="dvVideos" class=" col-sm-12 col-xs-12 col-md-12 no-padding">
                                                 <div class="col-md-11 col-sm-12 col-xs-12 no-padding">
+                                                  
                                                     <div class="form-group">
-                                                        <label class="col-sm-2 col-md-2 col-xs-4 control-label no-padding " for="form-field-1">
-                                                            Videos
-                                                        </label>
-                                                        <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divvideo" *ngFor="let data of bulkvideo">
-                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" name="chkvideolink"  [formControlName]="chkvideolink" id={{data.LinkID}}
-                                                                       class="pull-left" value={{data.LinkID}} (click)="checkVideoLinks(data)"/>
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    {{data.LinkName}}
-                                                                </label>
+                                                        <div class="row">
+                                                            <label class="col-sm-2 col-md-2 col-xs-4 control-label  " for="form-field-1">
+                                                                Videos
+                                                            </label>
+                                                            <div class="col-sm-10 col-md-10 col-xs-7 no-padding" id="divvideo">
+                                                                <div class="row">
+                                                                    <div class="col-md-2 col-sm-2 col-xs-12 no-padding" *ngFor="let data of bulkvideo">
+                                                                        <input type="checkbox" name="chkvideolink" formControlName="chkvideolink" id={{data.LinkID}}
+                                                                               class="pull-left" value={{data.LinkID}} (click)="checkVideoLinks(data)" />
+                                                                        <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                                                                            {{data.LinkName}}
+                                                                        </label>
+                                                                    </div>
+                                                                </div>
+                                                                <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
+                <input type="checkbox" id="emandatedemo" style="clear: both" class="pull-left" value="26" />
+                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                    Emandate
+                </label>
+            </div>-->
+                                                                <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
+                <input onclick="RemoveClass();" type="checkbox" name="rdoAccess" id="bulkphysicaldemo"
+                       class="pull-left" value="1" />
+                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                    Bulk Physical
+                </label>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
+                <input type="checkbox" id="bulkemandatedemo" style="clear: both" class="pull-left" />
+                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
+                    Bulk Emandate
+                </label>
+            </div>-->
                                                             </div>
-                                                            <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" id="emandatedemo" style="clear: both" class="pull-left" value="26" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Emandate
-                                                                </label>
-                                                            </div>-->
-                                                            <!--<div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input onclick="RemoveClass();" type="checkbox" name="rdoAccess" id="bulkphysicaldemo"
-                                                                       class="pull-left" value="1" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Bulk Physical
-                                                                </label>
-                                                            </div>
-                                                            <div class="col-md-2 col-sm-2 col-xs-12 no-padding">
-                                                                <input type="checkbox" id="bulkemandatedemo" style="clear: both" class="pull-left" />
-                                                                <label class=" col-md-10 col-xs-10 col-sm-10 no-padding-right control-label">
-                                                                    Bulk Emandate
-                                                                </label>
-                                                            </div>-->
                                                         </div>
                                                     </div>
                                                 </div>
@@ -622,4 +633,90 @@
             </form>
         </div>
     </div>
+
+    <div class="modal userlistpop" id="myModal" [style.display]="showModal ? 'block' : 'none'">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title" style="color: #162d46;font-weight: bold;font-size: 12px;">
+                        User List
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal" (click)="hide()">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+
+
+                    <div id="tbldiv">
+                        <div>
+                            <table id="tbluserlist">
+                                <thead>
+                                    <tr>
+                                        <th style="width:150px;"><input type="checkbox" name="all" id="chkalluserlist" (change)="isSelected = !isSelected">All</th>
+                                        <th style="width:300px;">Email Id</th>
+                                        <th style="width:300px;">User Name</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let data of nachuser; index as i" (click)="setSelectedRow(i)" [class.active]="i == selectedRow">
+                                        <td style="width:150px;"><input type="checkbox" class="chk" name="singlechk" [checked]="isSelected" (change)="checkSingleUser($event)" id={{data.UserId}}></td>
+                                        <td style="display:none">{{data.UserId}}</td>
+                                        <td style="width:300px;">{{data.EmailId}}</td>
+                                        <td style="width:300px;">{{data.UserName}}</td>
+
+                                    </tr>
+
+
+                                </tbody>
+
+                            </table>
+                        </div>
+                        <button type="button" class="btn btn-success pull-right" style="margin-top:8px;" data-dismiss="modal" (click)="hide()">Submit</button>
+
+
+                    </div>
+
+
+
+
+                </div>
+
+                <!-- Modal footer -->
+                <!--<div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal" (click)="hide()">Sumbit</button>
+                </div>-->
+
+            </div>
+        </div>
+    </div>
+    <div class="modal success" id="myModal" [style.display]="showModalsave ? 'block' : 'none'">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <img src="../../ClientApp/assets/images/saveSuccessImg.png" />
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal" (click)="hide()">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p> User Saved Successfully</p>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal" (click)="hide()">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </div>
