kislay loder changes

--- a/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
+++ b/QuickZip/ClientApp/app/master/historical-mandate/historical-mandate.component.html
@@ -1,6 +1,6 @@
 <div class="main-content" id="maincontent">
     <div class="content">
-        <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+        <div class="col-md-12 col-sm-6 col-xs-4 ">
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Historical Mandate</span>
             </div>
@@ -111,7 +111,7 @@
 
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" style="display: none;">
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader" >
             <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv" style="top: 1%;">
