--- a/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadoldmandate/downloadoldmandate.component.html
@@ -1,6 +1,6 @@
 <div class="main-content" id="maincontent">
     <div class="content">
-        <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
+        <div class="col-md-12 col-sm-6 col-xs-4">
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Download Old Mandate</span>
             </div>
@@ -216,7 +216,7 @@
 </div>
 
 <div class="container">
-    <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder2" [style.display]="loading ? 'block':'none'">      <!--*ngIf="loading"-->       <!--  ngHide="loading"  -->    <!--style="display: none;"-->
+    <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder2" *ngIf="loading" >      <!--*ngIf="loading"-->       <!--  ngHide="loading"  -->    <!--style="display: none;"-->
         <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
     </div>
 </div>
