--- a/QuickZip/ClientApp/app/master/umrnupload/umrnupload.component.html
+++ b/QuickZip/ClientApp/app/master/umrnupload/umrnupload.component.html
@@ -1,5 +1,5 @@
 <div class="main-content" id="maincontent">
-   
+
     <div class="content">
         <div class="col-md-12 col-sm-6 col-xs-4">
 
@@ -117,6 +117,9 @@
             </div>
 
         </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
+            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+        </div>
 
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv1" style="margin-top:5%;">
 
@@ -144,16 +147,16 @@
                         <td style="width:220px;">{{Data.UserName}}</td>
                         <td style="width:220px;">{{Data.TotalCount}}</td>
                         <td style="width:220px;">{{Data.SuccessCount}}</td>
-
-
                     </tr>
-
+                    <tr *ngIf="umrnupload?.length == 0">
+                        <td colspan="5">No Record Found!</td>
+                    </tr>
                 </tbody>
 
             </table>
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv4" style="margin-top:1%;display:none;" #tblgrddetails>
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv4" style="margin-top:1%; display:none;" #tblgrddetails>
             <label style="font-size: 12px;font-weight: bold; color: #2fa9a8;" id="lblTotalCount"></label>
 
             <span class="btnspa" id="">
@@ -161,7 +164,7 @@
 
                 <label class="btnexportumrn" (click)="downloadMaingriddetails()"><i class="fa fa-file-excel-o" style="padding-right: 5px!important;"></i>Export</label>
                 <!--<input type="button" class=" btn btn-success btnexcel"
-            value="Download Excel" (click)="downloadMaingriddetails()" />-->
+                value="Download Excel" (click)="downloadMaingriddetails()" />-->
             </span>
 
             <table id="tblgrddetails">
@@ -194,24 +197,23 @@
                         <td style="width:120px;">{{Data.AccountType}}</td>
                         <td style="width:150px;">{{Data.AccountNo}}</td>
                         <td style="width:150px;">{{Data.IFSC}}</td>
-
-
-
                     </tr>
-
+                    <tr *ngIf="maingriddetails?.length == 0">
+                        <td colspan="10">No Record Found!</td>
+                    </tr>
                 </tbody>
 
             </table>
 
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv3" style="margin-top:1%;display:none;">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv3" style="margin-top:1%; display:none;">
             <label style="font-size: 12px;font-weight: bold; color: #2fa9a8;" id="lblsuccessCount"></label>
             <span class="btnspa" id="">
 
                 <label class="btnexportumrn" (click)="downloadgrdsuccess()"><i class="fa fa-file-excel-o" style="padding-right: 5px!important;"></i>Export</label>
 
                 <!--<input type="button" class=" btn btn-success btnexcel"
-            value="Download Excel" (click)="downloadgrdsuccess()" />-->
+                value="Download Excel" (click)="downloadgrdsuccess()" />-->
             </span>
             <table id="tblsuccess">
                 <thead>
@@ -225,9 +227,6 @@
                         <th style="width:120px;">Account Type</th>
                         <th style="width:150px;">Account Number</th>
                         <th style="width:150px;"> IFSC</th>
-
-
-
                     </tr>
                 </thead>
                 <tbody>
@@ -242,25 +241,24 @@
                         <td style="width:120px;">{{Data.AccountType}}</td>
                         <td style="width:150px;">{{Data.AccountNo}}</td>
                         <td style="width:150px;">{{Data.IFSC}}</td>
-
-
-
                     </tr>
-
+                    <tr *ngIf="grdsuccess?.length == 0">
+                        <td colspan="9">No Record Found!</td>
+                    </tr>
                 </tbody>
 
             </table>
 
         </div>
 
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv2" style="margin-top:1%;display:none;">
+        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv2" style="margin-top:1%; display:none;">
             <label style="font-size: 12px;font-weight: bold; color: #2fa9a8;" id="lblUnsuccessCount"></label>
             <span class="btnspa" id="">
 
                 <label class="btnexportumrn" (click)="downloadgrdUnsuccess()"><i class="fa fa-file-excel-o" style="padding-right: 5px!important;"></i>Export</label>
 
                 <!--<input type="button" class=" btn btn-success btnexcel"
-            value="Download Excel" (click)="downloadgrdUnsuccess()" />-->
+                value="Download Excel" (click)="downloadgrdUnsuccess()" />-->
             </span>
             <table id="tblunsuccess">
                 <thead>
@@ -275,13 +273,10 @@
                         <th style="width:150px;">Account Number</th>
                         <th style="width:150px;"> IFSC</th>
                         <th style="width:150px;"> Remark</th>
-
-
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let Data of grdunsuccess">
-
                         <td style="width:100px;">{{Data.UMRN}}</td>
                         <td style="width:120px;">{{Data.Amount}}</td>
                         <td style="width:220px;">{{Data.CustomerName}}</td>
@@ -292,10 +287,10 @@
                         <td style="width:150px;">{{Data.AccountNo}}</td>
                         <td style="width:150px;">{{Data.IFSC}}</td>
                         <td style="width:150px;">{{Data.Remark}}</td>
-
-
                     </tr>
-
+                    <tr *ngIf="grdunsuccess?.length == 0">
+                        <td colspan="10">No Record Found!</td>
+                    </tr>
                 </tbody>
 
             </table>
@@ -310,5 +305,29 @@
 
 
     </div>
-       
+    <div class="modal success" id="myModal" [style.display]="showModalsave ? 'block' : 'none'">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <img src="../../ClientApp/assets/images/saveSuccessImg.png" />
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal" (click)="hide()">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p> UMRN Uploaded Successfully</p>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal" (click)="hide()">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
