--- a/QuickZip/ClientApp/app/sidebar/sidebar.component.html
+++ b/QuickZip/ClientApp/app/sidebar/sidebar.component.html
@@ -17,6 +17,10 @@
         <li class=""><a routerLink="/Allumrn" routerLinkActive="active"><i class="menu-icon fa fa-hourglass-start" aria-hidden="true"></i><span class="menu-text">All UMRN</span></a></li>
         <li class=""><a routerLink="/Nachtransactionpresentation" routerLinkActive="active"><i class="menu-icon fa fa-exchange" aria-hidden="true"></i><span class="menu-text">Nach Transaction Presentation</span></a></li>
         <li class=""><a routerLink="/LinkSetup" routerLinkActive="active"><i class="menu-icon fa fa-link" aria-hidden="true"></i><span class="menu-text">Link Setup</span></a></li>
+        <li class=""><a routerLink="/BulkEmandate" routerLinkActive="active"><i class="menu-icon fa fa-book" aria-hidden="true"></i><span class="menu-text">Bulk Emandate</span></a></li>
+        <li class=""><a routerLink="/BulkUpload" routerLinkActive="active"><i class="menu-icon fa fa-book" aria-hidden="true"></i><span class="menu-text">Bulk Upload</span></a></li>
+        <li class=""><a routerLink="/ReportView" routerLinkActive="active"><i class="menu-icon fa fa-book" aria-hidden="true"></i><span class="menu-text">Report View</span></a></li>
+        <li class=""><a routerLink="/EntitySetup" routerLinkActive="active"><i class="menu-icon fa fa-book" aria-hidden="true"></i><span class="menu-text">Entity Setup</span></a></li>
 
 
     </ul>
