--- a/QuickZip/ClientApp/app/master/downloadoldemandate/downloadoldemandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadoldemandate/downloadoldemandate.component.html
@@ -12,23 +12,23 @@
 
                         <li>
                             <!--<i class="fa fa-download" aria-hidden="true" title="Export"></i>
-                            <label>
-                                Download old E-Mandate Excel File
-                            </label>-->
+                        <label>
+                            Download old E-Mandate Excel File
+                        </label>-->
                         </li>
                         <li>
                             <!--<i class="fa fa-file-text" aria-hidden="true" title="New"></i>
-                            <label  style="display: none">
-                                Download Scanned Mandate
-                            </label>-->
+                        <label  style="display: none">
+                            Download Scanned Mandate
+                        </label>-->
                         </li>
-                        <li  style="display: none">
+                        <li style="display: none">
                             <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
                             <label>
                                 Reject Mandate
                             </label>
                         </li>
-                        <li  style="display: none">
+                        <li style="display: none">
                             <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
                             <label>
                                 Submit
@@ -118,15 +118,18 @@
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
                            value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="PostData(FromDate.value,Todate.value,bankdrop.value)" />
-                    <label id="lblName">{{errormsg}}</label>
+                    <label id="lblName" style="color:red">{{errormsg}}</label>
 
-                    <span id="btnspa">
+                    <span id="btnspa"  [style.display]="showlabel ? 'block' : 'none'">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <input type="button" class=" btn btn-success" id="btnexcel"
                                value="Download Excel" (click)="download()" />
                     </span>
                 </div>
             </div>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
+            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
         </div>
 
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
@@ -150,9 +153,9 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let lang of Databind ">
-                        
+
                         <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (click)="Removelabel()" (change)="onChange($event,lang); lang.selected = !(lang.selected)"></td>
-                      
+
                         <td style="width:150px;"> {{lang.DebtorName}}</td>
                         <td style="width:220px;">{{lang.InstructedAgentMemberName}}</td>
                         <td style="width:220px;">{{lang.ConsumerReferenceNumber}}</td>
@@ -167,13 +170,13 @@
 
                     </tr>
                     <tr *ngIf="Databind?.length == 0">
-                        <td colspan="3" >No data!</td>
+                        <td colspan="3">No data!</td>
                     </tr>
 
                 </tbody>
 
             </table>
-           
+
         </div>
 
     </div>
